objects/Issues_and_Challenges__c.object
<CustomObject>
    <description>R5 - Issues and Challenges</description>
    <fields>
        <fullName>Account_Plan_Status__c</fullName>
        <formula>TEXT(Account_Plan__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>R5 - Master Detail Relationship with Account Plan</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Issues and Challenges</relationshipLabel>
        <relationshipName>Issues_and_Challenges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup Relationship to Actions</description>
        <label>Account Analysis and PIE Actions</label>
        <referenceTo>Actions__c</referenceTo>
        <relationshipLabel>Issues and Challenges</relationshipLabel>
        <relationshipName>Issues_and_Challenges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Resolution_Date__c</fullName>
        <description>R5 - Actual Resolution Date</description>
        <label>Actual Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup To User</description>
        <inlineHelpText>Person assign to resolve Account Plan Issue or Challenge</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues_and_Challenges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Problem_Identified__c</fullName>
        <description>R5 - Business Problem Identified</description>
        <inlineHelpText>Account Plan Issue or Challenge Identified</inlineHelpText>
        <label>Business Problem Identified</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>R5 - Description</description>
        <inlineHelpText>A more detailed description of the Account Plan Issue or Challenge Identified</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Logged_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>R5 - Logged Date</description>
        <label>Logged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>R5 - Resolution</description>
        <inlineHelpText>Outcome of the Account Plan Issue or Challenge</inlineHelpText>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>R5 - Status</description>
        <inlineHelpText>Status as per picklist</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Resolution_Date__c</fullName>
        <description>R5 - Target Resolution Date</description>
        <inlineHelpText>The targeted end date the Account Plan Issue or Challenges should be resolved</inlineHelpText>
        <label>Target Resolution Date</label>
        <type>Date</type>
    </fields>
    <label>Issues and Challenges</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Plan__c</columns>
        <columns>Actions__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Target_Resolution_Date__c</columns>
        <columns>Actual_Resolution_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Issues and Challenges Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues and Challenges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Issues_Challenges_Status_Closed_Check</fullName>
        <active>true</active>
        <description>R5 - If Account Plan Status is Closed, then the user should not edit the Issues and Challenges.</description>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
ISPICKVAL(Account_Plan__r.Status__c, &apos;Closed&apos;)
)</errorConditionFormula>
        <errorMessage>You cannot save the changes - Account Plan is Closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Target_Resolution_Year_comparison</fullName>
        <active>true</active>
        <description>R5</description>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
IF ( TEXT(Account_Plan__r.Account_Plan_Year__c) != NULL, YEAR(Target_Resolution_Date__c) &lt; (VALUE(TEXT(Account_Plan__r.Account_Plan_Year__c))-3), FALSE)
)</errorConditionFormula>
        <errorMessage>Target Resolution Date year must be either greater than Account Plan Year or past three years from Account Plan Year</errorMessage>
    </validationRules>
</CustomObject>